# habits.txt

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.journal  main.py  pyproject.toml
habits_txt/: builder.py  cli.py  config.py  date.py  defaults.py  directives.py  exceptions.py  journal.py  models.py  parser.py  records_query.py  style.py
src/: builder.py  cli.py  defaults.py  directives.py  exceptions.py  journal.py  models.py  parser.py  utils.py
tests/: test_builder.py  test_config.py  test_date.py  test_directives.py  test_exceptions.py  test_journal.py  test_models.py  test_parser.py  test_records_query.py  test_utils.py
