[tool.poetry]
name = "habits.txt"
version = "0.1.2"
description = ""
authors = ["estebanthi <esteban.thilliez@gmail.com>"]
readme = "README.md"
packages = [{include = "habits_txt"},{include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.12"
croniter = "^2.0.5"

[tool.poetry.scripts]
hbtxt = "main:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
