[tool.poetry]
name = "habits.txt"
version = "0.3.4"
description = ""
authors = ["estebanthi <esteban.thilliez@gmail.com>"]
readme = "README.md"
packages = [
    {include = "habits_txt"}, {include = "bin"}
]

[tool.poetry.dependencies]
python = "^3.12"
croniter = "^2.0.5"
click = "^8.1.7"

[tool.poetry.scripts]
hbtxt = "bin.hbtxt:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.4.2"
mypy = "^1.10.0"
types-croniter = "^2.0.0.20240423"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
